# MASTHA

./: .gitignore  Data_Preprocessing.ipynb  GP_and_BO.ipynb  pyproject.toml
Archiv/configs/: config_1.json
Archiv/src/: data_utils.py  gp_model.py  gp_model_kriese.py  logger_utils.py  main.py  settings.py
Data_Screening/: bins_screening.py  screening_bo.py  screening_bo_final.py  screening_bo_final2.py  screening_gp.py  screening_präsi.py  screening_präsi_wc.py  screening_vext_chem_res.py  test_wc.py
TestBench/: TestBench.ipynb  TestBench_MeStopid.ipynb  TestBench_Präsi.ipynb  Testbench_GP_BO.ipynb  Testbench_GP_BO_V001.ipynb  Testbench_GP_BO_V002.ipynb  Testbench_GP_BO_V002_pressureswing.ipynb  Testbench_GP_BO_V003_tempswing.ipynb  Testbench_GP_BO_V004_tempswing_diff.ipynb  Testbench_GP_BO_V005_swing_new.ipynb  Testbench_GP_BO_V005_tempswing_reduziert.ipynb  Testbench_Vext_raw.ipynb  Testbench_addedFeatures_chem_res.ipynb  Testbench_allHist_variants.ipynb  Testbench_bo_results.ipynb  Testbench_chem_pot_res_bulk.ipynb  Testbench_dft_vext.ipynb  Testbench_features.ipynb  Testbench_features_new.ipynb  Testbench_gp_results.ipynb  Testbench_isotherm.ipynb  Testbench_mergin_data.ipynb  Testbench_newTestset.ipynb  Testbench_pickle_and_hist.ipynb  Testbench_pressureswing.ipynb  Testbench_stuff.ipynb  Testbench_tempswing.ipynb  Testbench_vgl_TempPressureSwing.ipynb  TestoBench_Results.ipynb  Untitled.ipynb  Untitled1-Copy1.ipynb  Untitled1.ipynb  dreiding.json  uff.json
TestBench/dft_ad_jax/: __init__.py  dft.py  gmres.py  grid.py  (+1 more)
thesis/: Titelseite.tex  main.tex
(+12 files in other folders)
